# animagineit2.0

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  index.html  metadata.json  nginx.conf  server.ts  vite.config.ts
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: cryptographit.py  main.py  serverless.py
backend/app/ai/: serverless.py
backend/app/api/: v1.py
backend/app/database/: __init__.py  minio.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 5c6ad77680db_auto_sync_20260316_205242.py  5e1c5bbb17b0_auto_sync_20260315_193039.py  6468d606e7f8_auto_sync_20260316_215941.py  8483c9dfb660_auto_sync_20260316_140052.py  adda8cb62fb5_auto_sync_20260316_201901.py  bcc0dea9bfd4_auto_sync_20260316_155252.py  f9f022ebfc99_auto_sync_20260316_213617.py
src/: App.tsx  index.css
