[project]
name = "animagineit-backend"
version = "1.0.0"
description = "FastAPI backend for animagineit 2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "cryptography",
    "modal",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]